crates/atm-types/tests/snapshots/serde__login_method.snap
---
source: crates/atm-types/tests/serde.rs
expression: LOGIN_METHODS
---
[
  "ClaudeAi",
  "Console",
  "Sso"
]
