crates/atm-types/tests/snapshots/serde__merge_strategy.snap
---
source: crates/atm-types/tests/serde.rs
expression: MERGE_STRATEGIES
---
[
  "UpdateRef",
  "FfCheckedOut"
]
