crates/atm-types/tests/snapshots/serde__open_target.snap
---
source: crates/atm-types/tests/serde.rs
expression: OPEN_TARGETS
---
[
  "Finder",
  "Terminal",
  "Editor"
]
