crates/atm-types/tests/snapshots/serde__permission_mode.snap
---
source: crates/atm-types/tests/serde.rs
expression: "PermissionMode::ALL"
---
[
  "default",
  "acceptEdits",
  "bypassPermissions"
]
