crates/atm-types/tests/snapshots/serde__plan_state.snap
---
source: crates/atm-types/tests/serde.rs
expression: "PlanState::ALL"
---
[
  "running",
  "awaiting",
  "started",
  "dismissed",
  "failed"
]
