crates/atm-types/tests/snapshots/serde__process_status.snap
---
source: crates/atm-types/tests/serde.rs
expression: "ProcessStatus::ALL"
---
[
  "running",
  "completed",
  "failed",
  "killed"
]
