crates/atm-types/tests/snapshots/serde__stop_reason.snap
---
source: crates/atm-types/tests/serde.rs
expression: "StopReason::ALL"
---
[
  "user_stop",
  "app_shutdown",
  "app_restart",
  "spawn_error",
  "init_timeout",
  "exit_timeout",
  "crash",
  "auth_failure",
  "usage_limit"
]
