crates/atm-types/tests/snapshots/serde__task_status.snap
---
source: crates/atm-types/tests/serde.rs
expression: "TaskStatus::ALL"
---
[
  "todo",
  "inprogress",
  "inreview",
  "done",
  "cancelled"
]
