crates/atm-types/tests/snapshots/serde__transcript_msg.snap
---
source: crates/atm-types/tests/serde.rs
expression: transcript_msgs()
---
[
  {
    "t": "Snapshot",
    "entries": [
      {
        "idx": 0,
        "rev": 2,
        "process_id": "00000000-0000-4000-8000-000000000004",
        "ts": 100,
        "parent_tool_use_id": null,
        "body": {
          "type": "UserMessage",
          "text": "a"
        }
      }
    ],
    "has_more": true,
    "typing": "sto scri"
  },
  {
    "t": "Upsert",
    "entries": [
      {
        "idx": 1,
        "rev": 2,
        "process_id": "00000000-0000-4000-8000-000000000004",
        "ts": 101,
        "parent_tool_use_id": "toolu_parent",
        "body": {
          "type": "AssistantText",
          "text": "b"
        }
      }
    ]
  },
  {
    "t": "Typing",
    "text": null
  }
]
