crates/atm-types/tests/snapshots/serde__verify_state.snap
---
source: crates/atm-types/tests/serde.rs
expression: "VerifyState::ALL"
---
[
  "running",
  "passed",
  "failed",
  "error"
]
